yaml/dts-ui.yaml
---
# Source: dts-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dts-ui
  namespace: dts
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: dts-ui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30001
---
# Source: dts-ui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dts-ui
  namespace: dts
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dts-ui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dts-ui
        qfusion/useIstio: "true"
    spec:
      affinity: 
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - dts-ui
            topologyKey: kubernetes.io/hostname
      
      containers:
        - name: ui
          image: k8smaster.qfusion.irds/irds/dbmotion-ui:hcs-dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
            - name: web-nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      restartPolicy: Always
      terminationGracePeriodSeconds: 0
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
            type: ""
        - name: web-nginx-conf
          configMap:
            name: web-nginx-conf
