yaml/istio.yaml
---
# Source: istio/templates/auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: dts
  annotations:
  labels:
    app.kubernetes.io/name: auth
    install.woqutech.com/managed-by: qfusion-installer-operator
    install.woqutech.com/package: qfusion-webserver
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: auth
  ports:
    - name: http-auth
      port: 9095
      protocol: TCP
      targetPort: 9095
    - name: http-user
      port: 9096
      protocol: TCP
      targetPort: 9096
---
# Source: istio/templates/web_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: dts-ingressgateway
  namespace: dts
  annotations:
  labels:
    app: dts-ingressgateway
spec:
  type: ClusterIP
  selector:
    app: dts-ingressgateway
  ports:
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: 8080
---
# Source: istio/templates/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: dts
  labels:
    app.kubernetes.io/name: auth
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: auth
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      name: auth
      annotations:
        sidecar.istio.io/inject: "y"
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: auth
        qfusion/useIstio: "true"
    spec:
      containers:
        - args:
            - --dbAddr=$(DATABASE_USERNAME):$(DATABASE_PASSWORD)@tcp(qfusion-cmdb0.qfusion:3306)/webserver?parseTime=true&timeout=5s&readTimeout=6s&charset=utf8&parseTime=true&loc=Local
            - --destAddr=http://dts-ingressgateway
            - --innerAddr=0.0.0.0:9096
            - --captchaCheck=true
            - --homeUrl=/dts
            - --logtostderr
            - --casServer=https://auth.songshanghu-x86-2.com/authui
            - --skipVerify=true
            - --hcsToken=true
            - --paramWhiteList=homeUrl,state,service,region,home,origin
            - --defaultDepartment=mo
            - --useRsaClient=true
            - --hcsDepartment=true
            - --sessionApiPrefix=/prometheus
            - --whiteListPrefix=/prometheus
          image: k8smaster.qfusion.irds/irds/auth:v1.0
          imagePullPolicy: IfNotPresent
          name: auth
          ports:
            - containerPort: 9095
              name: auth
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /auth/v1/reload
              port: 9095
              scheme: HTTP
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/conf
              name: auth-config
            - mountPath: /etc/localtime
              name: localtime
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: dboperator
      serviceAccountName: dboperator
      terminationGracePeriodSeconds: 0
      tolerations:
        - effect: NoExecute
          key: qfusion/master
          operator: Exists
        - effect: NoExecute
          key: node-role.kubernetes.io/master
          operator: Exists
          tolerationSeconds: 60
      volumes:
        - configMap:
            defaultMode: 420
            name: auth-config-v0.0.1
          name: auth-config
        - hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
            type: ""
          name: localtime
---
# Source: istio/templates/web_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dts-ingressgateway
  namespace: dts
  labels:
    app: dts-ingressgateway
    operator.istio.io/component: "dts-IngressGateways"
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dts-ingressgateway
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dts-ingressgateway
      annotations:
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
        prometheus.io/path: "/stats/prometheus"
        sidecar.istio.io/inject: "false"
    spec:
      securityContext:
        runAsUser: 1337
        runAsGroup: 1337
        runAsNonRoot: true
        fsGroup: 1337
      tolerations:
        - effect: NoExecute
          key: qfusion/master
          operator: Exists
        - effect: NoExecute
          key: node-role.kubernetes.io/master
          operator: Exists
          tolerationSeconds: 60
      containers:
        - name: istio-proxy
          image: "k8smaster.qfusion.irds/irds/proxyv2:1.17.2-distroless"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
              name: qfusion-web
          args:
            - proxy
            - router
            - --domain
            - $(POD_NAMESPACE).svc.cluster.local
            - --proxyLogLevel=warning
            - --proxyComponentLogLevel=misc:error
            - --log_output_level=default:info
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz/ready
              port: 15021
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: workload-socket
              mountPath: /var/run/secrets/workload-spiffe-uds
            - name: credential-socket
              mountPath: /var/run/secrets/credential-uds
            - name: workload-certs
              mountPath: /var/run/secrets/workload-spiffe-credentials
            - name: istio-envoy
              mountPath: /etc/istio/proxy
            - name: config-volume
              mountPath: /etc/istio/config
            - mountPath: /var/run/secrets/istio
              name: istiod-ca-cert
            - mountPath: /var/lib/istio/data
              name: istio-data
            - name: podinfo
              mountPath: /etc/istio/pod
            - name: ingressgateway-certs
              mountPath: "/etc/istio/ingressgateway-certs"
              readOnly: true
            - name: ingressgateway-ca-certs
              mountPath: "/etc/istio/ingressgateway-ca-certs"
              readOnly: true
      volumes:
        - emptyDir: {}
          name: workload-socket
        - emptyDir: {}
          name: credential-socket
        - emptyDir: {}
          name: workload-certs
        - name: istiod-ca-cert
          configMap:
            defaultMode: 420
            name: istio-ca-root-cert
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
        - name: istio-envoy
          emptyDir: {}
        - name: istio-data
          emptyDir: {}
        - name: config-volume
          configMap:
            name: istio
            optional: true
        - name: ingressgateway-certs
          secret:
            secretName: "istio-ingressgateway-certs"
            optional: true
        - name: ingressgateway-ca-certs
          secret:
            secretName: "istio-ingressgateway-ca-certs"
            optional: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: dboperator
      serviceAccountName: dboperator
      terminationGracePeriodSeconds: 0
---
# Source: istio/templates/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  generation: 1
  labels:
    kiali_wizard: web-Gateway
  name: webserver
  namespace: dts
spec:
  selector:
    app: dts-ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http-web
      number: 80
      protocol: HTTP
---
# Source: istio/templates/gen_all_vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dts
  namespace: dts
  labels:
    install.woqutech.com/managed-by: qfusion-installer-operator
    install.woqutech.com/package: qfusion-istio
spec:
  hosts:
    - '*'
  gateways:
  - qfusion/auth
  http:
  - match:
    - uri:
        prefix: /dts/grafana
    route:
    - destination:
        host: auth.dts.svc.cluster.local
        port:
          number: 9095
  - match:
    - uri:
        prefix: /dts
    - uri:
        prefix: /upload
    - uri:
        prefix: /*.(jpg|png)
    route:
    - destination:
        host: dts-ui.dts.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/motion
    route:
    - destination:
        host: auth.dts.svc.cluster.local
        port:
          number: 9095
---
# Source: istio/templates/gen_all_vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dts-api-server
  namespace: dts
  labels:
    install.woqutech.com/managed-by: qfusion-installer-operator
    install.woqutech.com/package: qfusion-istio
spec:
  hosts:
    - '*'
  gateways:
  - webserver
  http:
  - match:
    - uri:
        prefix: /api/motion
    route:
    - destination:
        host: dts-api-server.dts.svc.cluster.local
        port:
          number: 3000
  - match:
      - uri:
          prefix: /dts/grafana
    route:
      - destination:
          host: grafana.dts.svc.cluster.local
          port:
            number: 3000
